--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,71 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+.git
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-ehthumbs.db
-Icon?
-Thumbs.db
-
-# OS X #
-######################
+# OSX
+# https://github.com/github/gitignore/blob/master/Global/OSXgitignore
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
 # Thumbnails
 ._*
+
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
 
-# Package #
-######################
-.git
-local_settings.py
-docs/_*
-dist
-*.db
-.svn
-*.pyc
-*~
+
+# TextMate
+# https://github.com/github/gitignore/blob/master/Global/TextMate.gitignore
+*.tmproj
+*.tmproject
+tmtags
+
+
+# Django 
+# https://github.com/github/gitignore/blob/master/Django.gitignore
 *.log
 *.pot
 *.pyc
-build
-*.egg-info
+local_settings.py
 
-# LESS Files #
-######################
-*.less
+
+# Python
+# https://github.com/github/gitignore/blob/master/Python.gitignore
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
